# MTKClient-NoRoot-Termux

./: README-USAGE.md  README.md  mtk.py  mtk_gui.py  pyproject.toml  requirements.txt  swiftmod.py
mtkclient/config/: brom_config.py  mtk_config.py
