[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "MTKClient-NoRoot-Termux"
description = "Optimized MTK flashing tools for Termux (No-Root)"
readme = "README.md"
license = {file = "LICENSE"}
version = "2.1.4"
requires-python = ">= 3.8"
dependencies = [
    "pyusb",
    "pycryptodome",
    "pycryptodomex",
    "colorama",
    "pyserial",
    "fusepy"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
]
keywords = ["mediatek", "mtk", "flashing", "termux", "no-root", "otg"]

[project.urls]
Repository = "https://github.com/sameenataj427-collab/MTKClient-NoRoot-Termux.git"

[project.scripts]
mtk = "mtkclient.mtk:main"
stage2 = "mtkclient.stage2:main"
da_parser = "mtkclient.Tools.da_parser:main"
brom_to_offs = "mtkclient.Tools.brom_to_offs:main"

[tool.hatch.build.targets.sdist]
include = [
    "mtkclient/Loader/*.bin",
    "mtkclient/Loader/Preloader/*.bin",
    "mtkclient/payloads/*.bin",
    "Tools/*.py"
]

[tool.hatch.build.targets.wheel.force-include]
"Tools/brom_to_offs.py" = "mtkclient/Tools/brom_to_offs.py"
"Tools/da_parser.py" = "mtkclient/Tools/da_parser.py"
"mtk.py" = "mtkclient/mtk.py"
"stage2.py" = "mtkclient/stage2.py"
"LICENSE" = "LICENSE"
"README.md" = "README.md"
